src/objects/ADvendio__TermsOfPayment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__DaysEarlyPaymentDiscount__c</fullName>
        <description>The number of days for the early payment discount to be applicable. If left empty only the discount name and the calculated discount amount will be shown on the invoicing documents.</description>
        <label>Days Early Payment Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__DaysNet__c</fullName>
        <description>The default/net payment period without any early payment discounts. If left empty, this information will be hidden on invoicing documents.</description>
        <label>Days Net</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__EarlyPaymentDiscount__c</fullName>
        <description>Enter the discount percentage for the early payment discount here.</description>
        <label>Early Payment Discount</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalKey__c</fullName>
        <description>Please enter the key from your external accounting solution here. ADvendio will use this for interfaces to systems like SAP FI, Navision, Sage etc..</description>
        <inlineHelpText>Please enter the key from your external accounting solution here. ADvendio will use this for interfaces to systems like SAP FI, Navision, Sage etc..</inlineHelpText>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Terms of Payment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__EarlyPaymentDiscount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Terms of Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms of Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>